--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="primary">
-        <p>LandScraper News-- the latest headlines in horticulture</p>
+        <p>Latest In Gaming News</p>
         <div>
             <a id="viewSavedButton" href="../html/saved.html" role="button" class="btn btn-primary btn-lg">View Saved Articles</a>
         </div>
